# app/controllers/api/v1/api_aides_controller.rb
@@ -136,7 +136,7 @@ module Api
       end
 
       def english_asker_params
-        params.permit(:disabled, :spectacle, :diploma, :category, :inscription_period, :monthly_allocation_value, :allocation_type, :age, :location_street_number, :location_route, :location_citycode).to_h
+        params.permit(:disabled, :spectacle, :executive, :diploma, :category, :inscription_period, :monthly_allocation_value, :allocation_type, :age, :location_street_number, :location_route, :location_citycode).to_h
       end
 
       def filters_param
