# public/apidocs/api-docs.json
@@ -273,6 +273,13 @@
         },
         {
           "in": "query",
+          "name": "executive",
+          "type": "string",
+          "description": "true,false",
+          "required": false
+        },
+        {
+          "in": "query",
           "name": "diploma",
           "type": "string",
           "description": "level_1,level_2,level_3,level_4,level_5,level_below_5",
@@ -444,6 +451,13 @@
         },
         {
           "in": "query",
+          "name": "executive",
+          "type": "string",
+          "description": "true,false",
+          "required": false
+        },
+        {
+          "in": "query",
           "name": "diploma",
           "type": "string",
           "description": "level_1,level_2,level_3,level_4,level_5,level_below_5",
@@ -609,6 +623,13 @@
         {
           "in": "query",
           "name": "spectacle",
+          "type": "string",
+          "description": "true,false",
+          "required": false
+        },
+        {
+          "in": "query",
+          "name": "executive",
           "type": "string",
           "description": "true,false",
           "required": false
